err/boois-creator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/boois_creator'...
Listing './lib/python3.5/site-packages/boois_creator/core'...
Listing './lib/python3.5/site-packages/boois_creator/core/info'...
Compiling './lib/python3.5/site-packages/boois_creator/core/info/obj.py'...
***   File "./lib/python3.5/site-packages/boois_creator/core/info/obj.py", line 113
    print o.name
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/boois_creator/creator.py'...
***   File "./lib/python3.5/site-packages/boois_creator/creator.py", line 39
    print "[ERROR] 模板路径不存在"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/boois_creator/demo'...
Compiling './lib/python3.5/site-packages/boois_creator/demo/json_checker_client.py'...
***   File "./lib/python3.5/site-packages/boois_creator/demo/json_checker_client.py", line 15
    print "check result: %s" % "success" if ret else "fail"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/boois_creator/test.py'...
***   File "./lib/python3.5/site-packages/boois_creator/test.py", line 11
    print k,v
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/boois_creator/tpl'...
Listing './lib/python3.5/site-packages/boois_creator/utils'...
Compiling './lib/python3.5/site-packages/boois_creator/utils/cmd_parser.py'...
***   File "./lib/python3.5/site-packages/boois_creator/utils/cmd_parser.py", line 48
    print "捡到一个:|" + cmd_str[i] + "|"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/boois_creator/utils/enum_parser.py'...
***   File "./lib/python3.5/site-packages/boois_creator/utils/enum_parser.py", line 19
    print "[WARNING] %s 语法错误,请检查" % val
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/boois_creator/utils/obj_json_checker.py'...
***   File "./lib/python3.5/site-packages/boois_creator/utils/obj_json_checker.py", line 48
    print '[ERROR] key值: -%s 声明错误,正确格式:-%s m,n,请检查 "%s":%s' % (Field.F_LENGTH,Field.F_LENGTH,k2, json.dumps(v, ensure_ascii=False))
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/boois_creator/utils/obj_json_parser.py'...
***   File "./lib/python3.5/site-packages/boois_creator/utils/obj_json_parser.py", line 21
    except ValueError,ex:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/boois_creator/utils/str_fmt_helper.py'...
***   File "./lib/python3.5/site-packages/boois_creator/utils/str_fmt_helper.py", line 18
    print camel("a_bc_de")
              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/boois_creator/utils/table_struc_creator'...
Compiling './lib/python3.5/site-packages/boois_creator/utils/table_struc_creator/field.py'...
***   File "./lib/python3.5/site-packages/boois_creator/utils/table_struc_creator/field.py", line 42
    print f.to_txt()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/boois_creator/utils/table_struc_creator/table.py'...
***   File "./lib/python3.5/site-packages/boois_creator/utils/table_struc_creator/table.py", line 114
    print t.to_add_txt()
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/boois_creator/utils/vali_rule_chker.py'...
***   File "./lib/python3.5/site-packages/boois_creator/utils/vali_rule_chker.py", line 318
    print chker.is_validated
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/boois_creator-1.0.15.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
